--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html>
 <header>
   <title>CMSC389N Project 1</title>
+  <link style="css/mainstyle.css"></link>
+  <link syle="css/bootstrap.min.css"></link>
 </header>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Piano</a>
+      </div>
+    </div>
+  </nav>
   <div class="main-content">
     This is the initial page for Project 1
+
   </div>
 </body>
 </html>
