--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
-<header>
+<head>
   <title>CMSC389N Project 1</title>
-  <link style="css/mainstyle.css"></link>
-  <link syle="css/bootstrap.min.css"></link>
-</header>
+  <link rel='stylesheet' href='css/mainstyle.css'/>
+  <link rel='stylesheet' href='css/bootstrap.min.css'/>
+</head>
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
