Changed page topic

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>CMSC389N Project 1</title>
+  <title>How I Spend My Weekends</title>
   <link rel='stylesheet' href='css/mainstyle.css'/>
   <link rel='stylesheet' href='css/bootstrap.min.css'/>
 </head>
@@ -9,11 +9,11 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Piano</a>
+        <a class="navbar-brand" href="#">Weekend at Damien's</a>
       </div>
     </div>
   </nav>
-  <div class="main-content">
+  <div class="main-content container-fluid">
     This is the initial page for Project 1
 
   </div>
