Added some divs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,21 @@
     </div>
   </nav>
   <div class="main-content container-fluid">
-    This is the initial page for Project 1
+    <div class="introduction">
+        <h1>Introduction</h1>
+    </div>
+    <div class="friday">
 
+    </div>
+    <div class="saturday">
+
+    </div>
+    <div class="sunday">
+
+    </div>
+    <div class="contact">
+
+    </div>
   </div>
 </body>
 </html>
