--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Weekend at Damien's</a>
+        <a class="navbar-brand" href="friday">Friday</a>
       </div>
     </div>
   </nav>
   <div class="main-content container-fluid">
     <div class="introduction">
         <h1>Introduction</h1>
+        Welcome to my weekend!
     </div>
     <div class="friday">
-
+      <h2>Friday</h2>
+      <div class="rebecca">
+        <img class="rebecca-img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img>
+      </div>
     </div>
     <div class="saturday">
 
