--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="friday">
       <h2>Friday</h2>
       <div class="rebecca">
-        <img class="rebecca-img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img>
+        <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="rebecca-img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img></a>
       </div>
     </div>
     <div class="saturday">
