--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>How I Spend My Weekends</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='css/mainstyle.css'/>
   <link rel='stylesheet' href='css/bootstrap.min.css'/>
 </head>
