Fixed css and elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="eng">
 <head>
   <title>How I Spend My Weekends</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,11 +25,14 @@
         </ul>
       </div><!-- /.navbar-collapse -->
   </nav>
-  <div class="main-content container-fluid">
-    <div class="introduction">
-        <h1>Introduction</h1>
-        Welcome to my weekend!
+<div class="introduction">
+      <div class="container">
+        <h1> A Weekend with Damien </h1>
+        <p>
+        A brief overview of the wonder that is Damien's weekend
     </div>
+  </div>
+  <div class="main-content container">
     <div class="friday">
       <div class="day-header"><h2>Friday</h2></div>
       <div class="rebecca">
@@ -41,7 +44,7 @@
 
     </div>
     <div class="sunday">
-
+      <h2>Sunday<h2>
     </div>
     <div class="contact">
 
