Added html requirements

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav nav-days">
-          <li><a>Friday</a></li>
-          <li><a>Saturday</a></li>
-          <li><a>Sunday</a></li>
+          <li><a href="#friday-section">Friday</a></li>
+          <li><a href="#saturday-section">Saturday</a></li>
+          <li><a href="#sunday-section">Sunday</a></li>
+          <li><a href="#contact-section">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
   </nav>
@@ -32,24 +33,37 @@
         A brief overview of the wonder that is Damien's weekend
     </div>
   </div>
-  <div class="main-content container">
-    <div class="friday">
-      <div class="day-header"><h2>Friday</h2></div>
+  <article class="main-content container">
+    <section class="friday" id="friday-section">
+      <header class="day-header">
+        <h2>Friday</h2>
+      </header>
       <div class="rebecca">
         <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="rebecca-img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img></a>
       </div>
-    </div>
-    <div class="saturday">
-      <h2>Saturday<h2>
+      <div class="day-desc">
+        My fridays usually start out with some class and then I hold a lecture for a new experimental class here at UMD, followed by office hours!
+      </div>
+    </section>
+    <section class="saturday" id="saturday-section">
+      <header class="day-header">
+        <h2>Saturday</h2>
+      </header>
 
-    </div>
-    <div class="sunday">
-      <h2>Sunday<h2>
-    </div>
-    <div class="contact">
+    </section>
+    <section class="sunday" id="sunday-section">
+      <header class="day-header">
+        <h2>Sunday</h2>
+      </header>
 
-    </div>
-  </div>
+    </section>
+    <section class="contact" id="contact-section">
+      <header class="day-header">
+        <h2>Contact</h2>
+      </header>
+
+    </section>
+  </article>
 </body>
 <footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
