Added some content

--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@
         <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="rebecca-img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img></a>
       </div>
       <div class="day-desc">
-        My fridays usually start out with some class and then I hold a lecture for a new experimental class here at UMD, followed by office hours!
+        My Fridays usually start out with some class and then I hold a lecture for a new experimental class here at UMD, followed by office hours!
       </div>
     </section>
     <section class="saturday" id="saturday-section">
       <header class="day-header">
         <h2>Saturday</h2>
       </header>
-
+      <div class="day-desc">
+        This past Saturday I met up with some friends and played Magic: the Gathering all day. We ended the day by going out for dinner in Bethesda.
+        <p>
+        Magic is a trading card game and I will briefly explain the rules.
+      </div>
     </section>
     <section class="sunday" id="sunday-section">
       <header class="day-header">
