--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <p>
         A brief overview of the wonder that is Damien's weekend
     </div>
-  </div>
+</div>
   <article class="main-content container">
     <section class="friday" id="friday-section">
       <header class="day-header">
         <h2>Friday</h2>
       </header>
-      <div class="rebecca">
-        <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="rebecca-img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img></a>
+      <div class="img-container">
+        <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img></a>
       </div>
       <div class="day-desc">
         My Fridays usually start out with some class and then I hold a lecture for a new experimental class here at UMD, followed by office hours!
@@ -50,7 +50,7 @@
         <h2>Saturday</h2>
       </header>
       <div class="day-desc">
-        This past Saturday I met up with some friends and played Magic: the Gathering all day. We ended the day by going out for dinner in Bethesda.
+        This past Saturday I met up with some friends and played Magic: the Gathering all day, it's a blast! We ended the day by going out for dinner in Bethesda.
         <p>
         Magic is a trading card game and I will briefly explain the rules.
       </div>
@@ -59,15 +59,22 @@
       <header class="day-header">
         <h2>Sunday</h2>
       </header>
-
-    </section>
-    <section class="contact" id="contact-section">
-      <header class="day-header">
-        <h2>Contact</h2>
-      </header>
-
+      <div class="day-desc">
+        Sundays are usually when I unwind from all of the strenuous activities from the weekend. This is when I will work on my various
+        art pieces and if the weather is nice, go outdoors and practice my photography. It's important for your mental health to have
+        stress-relieving hobbies.
+        <p>
+        I like to take pictures of nature like this one:
+      </div>
+      <div class="img-container">
+        <img class="img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img>
+      </div>
     </section>
   </article>
+<div class="contact" id="contact-section">
+
+
+</div>
 </body>
 <footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
