Tried fixing up stuff

--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
         <p>
         Magic is a trading card game and I will briefly explain the rules.
       </div>
+      <div>
+        <table>
+          <thead>
+            <tr>
+              <th>Month</th>
+              <th>Savings</th>
+            </tr>
+          </thead>
+          <tfoot>
+            <tr>
+              <td>Sum</td>
+              <td>$180</td>
+            </tr>
+          </tfoot>
+          <tbody>
+            <tr>
+              <td>January</td>
+              <td>$100</td>
+            </tr>
+            <tr>
+              <td>February</td>
+              <td>$80</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </section>
     <section class="sunday" id="sunday-section">
       <header class="day-header">
@@ -64,10 +90,18 @@
         art pieces and if the weather is nice, go outdoors and practice my photography. It's important for your mental health to have
         stress-relieving hobbies.
         <p>
-        I like to take pictures of nature like this one:
+        I like to take pictures of nature like these
       </div>
-      <div class="img-container">
-        <img class="img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img>
+      <div class="nature-pics">
+        <div class="nature-img-container">
+          <img class="nature-img" src="img/turtle.jpg"></img>
+        </div>
+        <div class="nature-img-container">
+          <img class="nature-img" src="img/pearl.jpg"></img>
+        </div>
+        <div class="nature-img-container">
+          <img class="nature-img" src="img/pacific.jpg"></img>
+        </div>
       </div>
     </section>
   </article>
