--- a/index.html
+++ b/index.html
@@ -50,9 +50,21 @@
         <h2>Saturday</h2>
       </header>
       <div class="day-desc">
-        This past Saturday I met up with some friends and played Magic: the Gathering all day, it's a blast! We ended the day by going out for dinner in Bethesda.
-        <p>
-        Magic is a trading card game and I will briefly explain the rules.
+        <div class="day-intro">
+          This past Saturday I met up with some friends and played Magic: the
+          Gathering all day, it's a blast! We ended the day by going out for
+          dinner in Bethesda.
+          <p>
+          Magic is a trading card game and I will briefly explain the rules.
+          Usually each player brings his/her own deck of cards to a game. The game
+          is played 1v1 but can also be played
+          During a 2 player game each player takes a turn, the player that goes
+          first is determined at random, and when playing best of 3, in the following
+          games the player that lost the last game goes first.
+          <p>
+          Each player starts with 20 life and 7 cards in his/her hand.
+        </div>
+        
       </div>
       <div>
         <table>
