Added some stuff

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       </div>
       <div class="day-desc">
         My Fridays usually start out with some class and then I hold a lecture for a new experimental class here at UMD, followed by office hours!
+        &nbsp;
+        I teach a class about how to prepare for interviews and be successful in interviews.
       </div>
     </section>
     <section class="saturday" id="saturday-section">
@@ -64,33 +66,19 @@
           <p>
           Each player starts with 20 life and 7 cards in his/her hand.
         </div>
-        
-      </div>
-      <div>
-        <table>
-          <thead>
-            <tr>
-              <th>Month</th>
-              <th>Savings</th>
-            </tr>
-          </thead>
-          <tfoot>
-            <tr>
-              <td>Sum</td>
-              <td>$180</td>
-            </tr>
-          </tfoot>
-          <tbody>
-            <tr>
-              <td>January</td>
-              <td>$100</td>
-            </tr>
-            <tr>
-              <td>February</td>
-              <td>$80</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="day-info">
+          <div> </div>
+          <div>
+            <ol>
+              <li>Upkeep</li>
+              <li>Draw Step</li>
+              <li>Main Phase</li>
+              <li>Combat</li>
+              <li>Main Phase</li>
+              <li>End Step</li>
+            </ol>
+          </div>
+        </div>
       </div>
     </section>
     <section class="sunday" id="sunday-section">
@@ -106,20 +94,49 @@
       </div>
       <div class="nature-pics">
         <div class="nature-img-container">
-          <img class="nature-img" src="img/turtle.jpg"></img>
+          <img class="nature-img" src="img/turtle.jpg">
         </div>
         <div class="nature-img-container">
-          <img class="nature-img" src="img/pearl.jpg"></img>
+          <img class="nature-img" src="img/pearl.jpg">
         </div>
         <div class="nature-img-container">
-          <img class="nature-img" src="img/pacific.jpg"></img>
+          <img class="nature-img" src="img/pacific.jpg">
         </div>
       </div>
     </section>
   </article>
 <div class="contact" id="contact-section">
-
-
+  <div class="contact-content container">
+    <div class="contact-header">
+      About Us
+    </div>
+    <div class="contact-info">
+      <table>
+        <thead>
+          <tr>
+            <th>Month</th>
+            <th>Savings</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+            <td>Sum</td>
+            <td>$180</td>
+          </tr>
+        </tfoot>
+        <tbody>
+          <tr>
+            <td>January</td>
+            <td>$100</td>
+          </tr>
+          <tr>
+            <td>February</td>
+            <td>$80</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 </body>
 <footer>
