--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <div class="container">
         <h1> A Weekend with Damien </h1>
         <p>
-        A brief overview of the wonder that is Damien's weekend
+        <div class="site-desc">
+          A brief overview of the wonder that is Damien's weekend
+        </div>
     </div>
 </div>
   <article class="main-content container">
@@ -39,12 +41,15 @@
         <h2>Friday</h2>
       </header>
       <div class="img-container">
-        <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></img></a>
+        <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></a>
       </div>
       <div class="day-desc">
-        My Fridays usually start out with some class and then I hold a lecture for a new experimental class here at UMD, followed by office hours!
+        My Fridays usually start out with some class and then I hold a lecture
+        for a new experimental class here at UMD, followed by office hours!
         &nbsp;
-        I teach a class about how to prepare for interviews and be successful in interviews.
+        I teach a class about how to prepare for interviews and be successful
+        in interviews. The site for the class can be found
+        <a href="https://cmscinterviews.github.io/">here</a>.
       </div>
     </section>
     <section class="saturday" id="saturday-section">
@@ -57,25 +62,73 @@
           Gathering all day, it's a blast! We ended the day by going out for
           dinner in Bethesda.
           <p>
-          Magic is a trading card game and I will briefly explain the rules.
+          Magic is a trading card game and I will briefly explain the rules. The
+          premise of the game is that each player is a wizard and can cast magic spells.
+          The spells can be cast using mana which comes from mana sources like lands. The
+          specifics will be explained more in detail later.
+          <p>
           Usually each player brings his/her own deck of cards to a game. The game
           is played 1v1 but can also be played
           During a 2 player game each player takes a turn, the player that goes
           first is determined at random, and when playing best of 3, in the following
           games the player that lost the last game goes first.
           <p>
-          Each player starts with 20 life and 7 cards in his/her hand.
+          Each player starts with 20 life and 7 cards in his/her hand. There are several
+          different types of cards in Magic. The most fundamental card is a land card,
+          it can be used, or tapped, for mana to cast spells. Land is usually untapped
+          during the upkeep, or the start, of each turn. Mana comes in 5 different colors,
+          red, black, blue, white, green, and colorless. It can be used to cast spells, or
+          the cards in your hand. Everything in the game that isn't a land is a spell. It
+          has the same principles as Hearthstone. Most spells (like creatures and sorceries)
+          can only be cast during your main phase, but spells like instants can be cast during
+          any phase of a turn.
         </div>
         <div class="day-info">
-          <div> </div>
+          <div> These are the phases of a turn and what can be done during each phase </div>
           <div>
-            <ol>
-              <li>Upkeep</li>
-              <li>Draw Step</li>
-              <li>Main Phase</li>
-              <li>Combat</li>
-              <li>Main Phase</li>
-              <li>End Step</li>
+            <ol class="magic-phases">
+              <li>
+                Upkeep
+                <ul class="magic-phase-info">
+                  <li>Untap lands</li>
+                  <li>Cast Instants</li>
+                </ul>
+              </li>
+              <li>
+                Draw Step
+                <ul class="magic-phase-info">
+                  <li>Draw Card</li>
+                  <li>Cast Instants</li>
+                </ul>
+              </li>
+              <li>
+                Main Phase
+                <ul class="magic-phase-info">
+                  <li>Cast Sorceries, Creatures or Artifacts</li>
+                  <li>Cast Instants</li>
+                </ul>
+              </li>
+              <li>
+                Combat
+                <ul class="magic-phase-info">
+                  <li>Declare Attackers</li>
+                  <li>Declare Blockers</li>
+                  <li>Cast Instants</li>
+                </ul>
+              </li>
+              <li>
+                Main Phase
+                <ul class="magic-phase-info">
+                  <li>Cast Sorceries, Creatures or Artifacts</li>
+                  <li>Cast Instants</li>
+                </ul>
+              </li>
+              <li>
+                End Step
+                <ul class="magic-phase-info">
+                  <li>Cast Instants</li>
+                </ul>
+              </li>
             </ol>
           </div>
         </div>
@@ -103,6 +156,11 @@
           <img class="nature-img" src="img/pacific.jpg">
         </div>
       </div>
+      <div class="day-desc">
+        When I get done with my Sunday stroll I like to unwind by listening to some
+        Drake. He put's me in the mood with his silky voice. He sounds best next to
+        some running water so usually I listen to him while crying in the shower.
+      </div>
     </section>
   </article>
 <div class="contact" id="contact-section">
@@ -111,27 +169,39 @@
       About Us
     </div>
     <div class="contact-info">
-      <table>
+      <table class="contact-table">
         <thead>
           <tr>
-            <th>Month</th>
-            <th>Savings</th>
+            <th class="contact-table-label" colspan="3">Interested in More?</th>
+          </tr>
+          <tr class="contact-table-label">
+            <th class="contact-table-label" >Contact Us</th>
+            <th class="contact-table-label" >Follow Us</th>
+            <th class="contact-table-label" >Drake Links</th>
           </tr>
         </thead>
         <tfoot>
           <tr>
-            <td>Sum</td>
-            <td>$180</td>
+            <td colspan="3">Feel free to reach out to us on whatever it is we use on the computer these days</td>
+          </tr>
+          <tr>
+            <td colspan="3">Special Shoutout to Smart&copy; for being the inspiration for this page</td>
           </tr>
         </tfoot>
         <tbody>
           <tr>
-            <td>January</td>
-            <td>$100</td>
+            <td>Careers</td>
+            <td>Instagram</td>
+            <td><a href="https://www.youtube.com/watch?v=G1opQY1dJ34">Days In The East</a></td>
           </tr>
           <tr>
-            <td>February</td>
-            <td>$80</td>
+            <td rowspan="2">Life Advice</td>
+            <td>SnapChat</td>
+            <td><a href="https://www.youtube.com/watch?v=1-mVTMXzRnc">On a Wave</a></td>
+          </tr>
+          <tr>
+            <td><a href="https://github.com/garbageman">GitButt</a></td>
+            <td><a href="https://www.youtube.com/watch?v=EfGOqrXcm_Y">Club Paradise</a></td>
           </tr>
         </tbody>
       </table>
