--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="eng">
+<html lang="en">
 <head>
   <title>How I Spend My Weekends</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <link rel='stylesheet' href='css/mainstyle.css'/>
   <link rel='stylesheet' href='css/bootstrap.min.css'/>
 </head>
@@ -41,7 +42,7 @@
         <h2>Friday</h2>
       </header>
       <div class="img-container">
-        <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg"></a>
+        <a href="https://www.youtube.com/watch?v=kfVsfOSbJY0"><img class="img" src="https://i.ytimg.com/vi/kfVsfOSbJY0/maxresdefault.jpg" alt="Rebecca Black"></a>
       </div>
       <div class="day-desc">
         My Fridays usually start out with some class and then I hold a lecture
@@ -147,13 +148,13 @@
       </div>
       <div class="nature-pics">
         <div class="nature-img-container">
-          <img class="nature-img" src="img/turtle.jpg">
+          <img class="nature-img" src="img/turtle.jpg" alt="A Turtle">
         </div>
         <div class="nature-img-container">
-          <img class="nature-img" src="img/pearl.jpg">
+          <img class="nature-img" src="img/pearl.jpg" alt="A Doggo">
         </div>
         <div class="nature-img-container">
-          <img class="nature-img" src="img/pacific.jpg">
+          <img class="nature-img" src="img/pacific.jpg" alt="The Sunset">
         </div>
       </div>
       <div class="day-desc">
@@ -185,7 +186,7 @@
             <td colspan="3">Feel free to reach out to us on whatever it is we use on the computer these days</td>
           </tr>
           <tr>
-            <td colspan="3">Special Shoutout to Smart&copy; for being the inspiration for this page</td>
+            <td colspan="3">Special Shoutout to Smart&copy; (aka Arya) for being the inspiration for this page</td>
           </tr>
         </tfoot>
         <tbody>
