--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         art pieces and if the weather is nice, go outdoors and practice my photography. It's important for your mental health to have
         stress-relieving hobbies.
         <p>
-        I like to take pictures of nature like these
+        I like to take pictures of nature like these.
       </div>
       <div class="nature-pics">
         <div class="nature-img-container">
@@ -159,7 +159,7 @@
       </div>
       <div class="day-desc">
         When I get done with my Sunday stroll I like to unwind by listening to some
-        Drake. He put's me in the mood with his silky voice. He sounds best next to
+        Drake. He puts me in the mood with his silky voice. He sounds best next to
         some running water so usually I listen to him while crying in the shower.
       </div>
     </section>
@@ -206,11 +206,11 @@
     </div>
   </div>
 </div>
-</body>
 <footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 </footer>
+</body>
 </html>
